--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Django Settings
 DEBUG=False
-SECRET_KEY=your-very-secret-key-change-this-in-production-12345
+SECRET_KEY=7@*cn83&6*fn8lsv0&l9xaq!ty=7jlw8j$k#75u+1%4%zo*zw-
 ALLOWED_HOSTS=72.62.51.225,localhost,127.0.0.1
 
 # Database Configuration
@@ -11,7 +11,11 @@ DB_HOST=localhost
 DB_PORT=5432
  
 # Redis Configuration
-REDIS_URL=redis://localhost:6379/0
+REDIS_HOST=localhost
+REDIS_PORT=6379
+# Leave empty for local Redis without authentication
+# Set a strong password for production Redis
+REDIS_PASSWORD=
 
 # Email Configuration (optional - for production)
 EMAIL_HOST=smtp.gmail.com
@@ -20,8 +24,8 @@ EMAIL_USE_TLS=True
 EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 
-# Security Settings
-SECURE_SSL_REDIRECT=False
+# Security Settings - MUST be True for production HTTPS
+SECURE_SSL_REDIRECT=True
 SECURE_HSTS_SECONDS=31536000
 SECURE_HSTS_INCLUDE_SUBDOMAINS=True
 SECURE_HSTS_PRELOAD=True
